--- a/Frontend/interface/package.json
+++ b/Frontend/interface/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
+    "date-fns": "^4.1.0",
+    "element-plus": "^2.10.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
