--- a/Frontend/website/package.json
+++ b/Frontend/website/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
     "date-fns": "^4.1.0",
